k8s/dirty-santa-game-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: dirty-santa-game.dev
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: dirty-santa-game
              servicePort: 3000
